# arena

./: .gitignore  README.md
cross-intent-forecast-solution/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
cross-intent-forecast-solution/.github/workflows/: ci.yml
cross-intent-forecast-solution/configs/: config.yaml
cross-intent-forecast-solution/configs/data/: default.yaml
cross-intent-forecast-solution/configs/inference/: default.yaml
cross-intent-forecast-solution/configs/model/: default.yaml
cross-intent-forecast-solution/configs/training/: default.yaml
cross-intent-forecast-solution/data/: annotations.csv
cross-intent-forecast-solution/docker/: Dockerfile
cross-intent-forecast-solution/docs/: architecture.md
cross-intent-forecast-solution/scripts/: analyze_failures.py  average_checkpoints.py  benchmark.py  explain.py  export.py  infer.py  train.py  validate.py
cross-intent-forecast-solution/src/: __init__.py
cross-intent-forecast-solution/src/data/: __init__.py  augmentations.py  cache.py  datamodule.py  dataset.py  parser.py  schema.py  targets.py
cross-intent-forecast-solution/src/export/: __init__.py  onnx_export.py  tensorrt_export.py
cross-intent-forecast-solution/src/inference/: __init__.py  analyzer.py  benchmark.py  calibration.py  ensemble.py  predictor.py
cross-intent-forecast-solution/src/losses/: __init__.py  joint.py  (+1 more)
cross-intent-forecast-solution/tests/: conftest.py  test_data.py  test_export.py  test_inference.py  test_losses.py  test_metrics.py  test_model.py
(+13 files in other folders)
